--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <!--<i class="fa fa-envelope-alt big-mail"></i>-->
 
           <div>
-            <h3>Send us your resumé</h3>
+            <h3>Send us your CV</h3>
             <span class="ink-button blue fileinput-button">
               <span>Select file</span>
               <!-- The file input field used as target for the file upload widget -->
