--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!-- CSS to style the file input field as button and adjust the Bootstrap progress bars -->
-    <link rel="stylesheet" href="css/vendor/jquery_fileupload/jquery.fileupload.css">
+    <link rel="stylesheet" href="css/vendor/jquery.fileupload.css">
 
     <!-- load inks css for IE8 -->
     <!--[if lt IE 9 ]>
@@ -50,7 +50,8 @@
     <script type="text/javascript" src="js/vendor/ink/ink-all.min.js"></script>
     <script type="text/javascript" src="js/vendor/ink/autoload.js"></script>
 
-    <script src="js/fileupload.js"></script>
+    <script type="text/javascript" src="js/vendor/jquery.form.min.js"></script>
+    <script type="text/javascript" src="js/fileupload.js"></script>
   </head>
 
   <body>
@@ -177,11 +178,11 @@
 
           <div>
             <h3>Send us your CV</h3>
-            <span class="ink-button blue fileinput-button">
-              <span>Select file</span>
-              <input id="file" type="file">
-            </span>
-            <span id="upload" class="ink-button green" style="display: none;"></span>
+            <form id="upload-form" action="http://resumes.bananamarket.eu/resume" enctype="multipart/form-data" method="post">
+              Select your file: <input id="file" name="file" type="file">
+              <br>
+              <input type="submit" id="upload" class="ink-button green" style="display: none;">
+            </form>
           </div>
         </div>
       </div>
