--- a/index.html
+++ b/index.html
@@ -149,12 +149,21 @@
       </div>
       <div class="column-group gutters">
         <div class="all-60 medium-50 small-100 tiny-100 justify-text">
+          <span class="note">July 21st, 2014</span>
+          <h3>SINFO wants to help you get a job</h3>
+          <p>
+            Do you want to work for one of the companies at XXI SINFO?<br>
+            Use the form located at the right to send us your CV until the end of July and we'll do the rest.<br>
+            We'll get you an awesome job in no time!
+          </p>
+
           <span class="note">May 30th, 2014</span>
           <h3>Video Editing Workshop</h3>
           <p>
             Do you want to learn how to create an amazing video? One that becomes famous or viral? <br>
             SINFO brings you the perfect Workshop! <br>
-            Get your ticket <a href="https://ti.to/sinfo/ws-video/">here</a>.</p>
+            Get your ticket <a href="https://ti.to/sinfo/ws-video/">here</a>.
+          </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
           <!-- Begin MailChimp Signup Form -->
