--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
           <div>
             <h3>Send us your CV</h3>
-            <form id="upload-form" action="http://resumes.bananamarket.eu/resume" enctype="multipart/form-data" method="post">
+            <form id="upload-form" action="http://resumes.bananamarket.eu/upload" enctype="multipart/form-data" method="post">
               Select your file: <input id="file" name="file" type="file">
               <br><br>
               <input type="submit" id="upload" class="ink-button green" style="display: none;">
