--- a/index.html
+++ b/index.html
@@ -619,6 +619,14 @@
         </div>
       </div>
       <div class="column-group gutters">
+        <div class="all-15 medium-30 small-50 tiny-50">
+          <h6>Gustavo Brites</h6>
+          <img src="img/team/gustavo_brites.jpg" onmouseover="this.src='img/team/gustavo_brites.jpg'" onmouseout="this.src='img/team/gustavo_brites.jpg'" alt="">
+          <br>
+          <a href="mailto:gustavo.brites@sinfo.org"><i class="fa fa-envelope"></i></a>
+          <a href="https://www.facebook.com/GustavoLBrites" target="_blank"><i class="fa fa-facebook"></i></a>
+          <a href="https://pt.linkedin.com/pub/antónio-gustavo-brites/68/501/948/" target="_blank"><i class="fa fa-linkedin"></i></a>
+        </div>
       </div>
     </div>
 
