--- a/index.html
+++ b/index.html
@@ -618,6 +618,9 @@
         </div>
       </div>
       <div class="column-group gutters">
+        <div class="all-5 hide-medium hide-small">
+          <!-- spacer -->
+        </div>
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Gustavo Brites</h6>
           <img src="img/team/gustavo_brites.jpg" onmouseover="this.src='img/team/gustavo_brites.jpg'" onmouseout="this.src='img/team/gustavo_brites.jpg'" alt="">
