--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
           <!--End mc_embed_signup-->
           <!--<i class="fa fa-envelope-alt big-mail"></i>-->
 
-          <div>
+          <!--<div>
             <h3>Send us your CV</h3>
 	    <small class="note">Please name your file as firstname_lastname.pdf</small>
             <br><br>
@@ -186,12 +186,7 @@
    	      <input name="uploaded_file" type="file" />
     	      <input type="submit" value="Upload" />
   	    </form> 
-	    <!--<form id="upload-form" action="http://resumes.bananamarket.eu/upload" enctype="multipart/form-data" method="post">
-              Select your file: <input id="file" name="file" type="file">
-              <br><br>
-              <input type="submit" id="upload" class="ink-button green" style="display: none;">
-            </form>-->
-          </div>
+          </div>-->
         </div>
       </div>
     </div>
