--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <nav class="ink-navigation ink-grid hide-small hide-tiny ie7">
         <ul class="menu horizontal flat black shadowed">
           <li>
-            <a class="logoPlaceholder" href="#" title="SINFO"><img src="img/logotext.png"></a>
+            <a class="logoPlaceholder" href="#" title="SINFO"><img src="img/logo.png"></a>
           </li>
           <li><a href="#news">News</a></li>
           <li><a href="#speakers">Speakers</a></li>
@@ -64,7 +64,7 @@
       <nav class="ink-navigation ink-grid hide-all show-small">
         <ul class="menu vertical flat black">
           <li class="title">
-            <a class="logoPlaceholder push-left" href="#" title="SINFO"><img src="img/logotext.png"></a>
+            <a class="logoPlaceholder push-left" href="#" title="SINFO"><img src="img/logo.png"></a>
               <button class="toggle" data-target="#topbar_menu"><span class="fa fa-reorder"></span></button>
           </li>
         </ul>
