--- a/index.html
+++ b/index.html
@@ -607,6 +607,14 @@
           <a href="https://www.facebook.com/GustavoLBrites" target="_blank"><i class="fa fa-facebook"></i></a>
           <a href="https://pt.linkedin.com/pub/antónio-gustavo-brites/68/501/948/" target="_blank"><i class="fa fa-linkedin"></i></a>
         </div>
+        <div class="all-15 medium-30 small-50 tiny-50">
+          <h6>Andreia Matias</h6>
+          <img src="img/team/andreia_matias.jpg" onmouseover="this.src='img/team/andreia_matias.jpg'" onmouseout="this.src='img/team/andreia_matias.jpg'" alt="">
+          <br>
+          <a href="mailto:andreia.matias@sinfo.org"><i class="fa fa-envelope"></i></a>
+          <a href="https://www.facebook.com/andreia.matias.33" target="_blank"><i class="fa fa-facebook"></i></a>
+          <a href="https://pt.linkedin.com/pub/andreia-matias/48/133/9a4/" target="_blank"><i class="fa fa-linkedin"></i></a>
+        </div>
       </div>
     </div>
 
