--- a/index.html
+++ b/index.html
@@ -615,6 +615,16 @@
           <a href="https://www.facebook.com/andreia.matias.33" target="_blank"><i class="fa fa-facebook"></i></a>
           <a href="https://pt.linkedin.com/pub/andreia-matias/48/133/9a4/" target="_blank"><i class="fa fa-linkedin"></i></a>
         </div>
+        <div class="all-15 medium-30 small-50 tiny-50">
+          <h6>Miguel Araújo</h6>
+          <img src="img/team/miguel_araujo.png" onmouseover="this.src='img/team/miguel_araujo.png'" onmouseout="this.src='img/team/miguel_araujo.png'" alt="">
+          <br>
+          <a href="mailto:miguel.araujo@sinfo.org"><i class="fa fa-envelope"></i></a>
+          <a href="https://www.facebook.com/m.p.f.a.93" target="_blank"><i class="fa fa-facebook"></i></a>
+          <a href="http://twitter.com/donagraciete" target="_blank"><i class="fa fa-twitter"></i></a>
+          <a href="pt.linkedin.com/pub/miguel-araújo/63/619/743/" target="_blank"><i class="fa fa-linkedin"></i></a>
+          <a href="https://github.com/DonaGraciete" target="_blank"><i class="fa fa-github"></i></a>
+        </div>
       </div>
     </div>
 
