Correcção da index.html

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
           <br>
           <a href="mailto:miguel.araujo@sinfo.org"><i class="fa fa-envelope"></i></a>
           <a href="https://www.facebook.com/m.p.f.a.93" target="_blank"><i class="fa fa-facebook"></i></a>
-          <a href="http://twitter.com/donagraciete" target="_blank"><i class="fa fa-twitter"></i></a>
+          <a href="http://twitter.com/DonaGraciete" target="_blank"><i class="fa fa-twitter"></i></a>
           <a href="pt.linkedin.com/pub/miguel-araújo/63/619/743/" target="_blank"><i class="fa fa-linkedin"></i></a>
           <a href="https://github.com/DonaGraciete" target="_blank"><i class="fa fa-github"></i></a>
         </div>
