Revelação do orador Helder Pinto

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
           <li><a href="#meetus">Meet us!</a></li>
+          <li><a href="#orador" class="glow">QUEM É ESTE ORADOR?</a></li>
         </ul>
       </nav>
 
@@ -83,6 +84,7 @@
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
           <li><a href="#meetus">Meet us!</a></li>
+          <li><a href="#orador" class="glow">>QUEM É ESTE ORADOR?< /a></li>
         </ul>
       </nav>
     </div>
@@ -625,6 +627,35 @@
           <a href="pt.linkedin.com/pub/miguel-araújo/63/619/743/" target="_blank"><i class="fa fa-linkedin"></i></a>
           <a href="https://github.com/DonaGraciete" target="_blank"><i class="fa fa-github"></i></a>
         </div>
+      </div>
+    </div>
+
+    <div class="orador" id="orador">
+      <div class="opacidade">
+        <h1><a href="#orador" title="orador">Who's that speaker?</a></h1>
+        <div class="description">
+          Find now who is coming to SINFO 22.
+        </br>
+        </div>
+      </div>
+    </div>
+
+    <div class="ink-grid text-section">
+      <div class="column-group gutters">
+        <div class="all-50 medium-50 small-50">
+        </div>
+        <div id="orador_img" class="all-20 medium-20 small-20">
+          <img onmouseover="$('#textoOrador').show();$('#span_orador').text('Press to find more');$(this).attr('src', 'img/orador1.jpg');" onmouseout="$('#span_orador').text('Mouse over to reveal');$('#textoOrador').hide();$(this).attr('src', 'img/who.jpg');" onclick="window.open('http://www.helderpinto.com/');" src="img/who.jpg"><br>
+          <span id="span_orador">Mouse over to reveal</span>
+        </div>
+        <div id="textoOrador" style="display:none;" class="all-30 medium-30 small-30">
+        Worked at Crytek as Level Artist during Crysis 2 and midway through Crysis 3.
+        <br>He was responsible for performance, aesthetics, dressing the scene, modeling assets, creating textures and tweaking materials / shaders to bring the scene to life. While always respecting the Level Designers vision (block-mesh).
+        <br>
+        <br>Since 2012 he has been working as 3D Environment Artist at Blizzard Entertainment, bringing to life Diablo 3.
+        <br>
+        </div>
+
       </div>
     </div>
 
