--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
           <li><a href="#meetus">Meet us!</a></li>
-          <li><a href="#orador" class="glow">QUEM É ESTE ORADOR?</a></li>
+          <!--<li><a href="#orador" class="glow">QUEM É ESTE ORADOR?</a></li>-->
         </ul>
       </nav>
 
@@ -617,6 +617,11 @@
           <a href="https://www.facebook.com/andreia.matias.33" target="_blank"><i class="fa fa-facebook"></i></a>
           <a href="https://pt.linkedin.com/pub/andreia-matias/48/133/9a4/" target="_blank"><i class="fa fa-linkedin"></i></a>
         </div>
+       </div>
+      <div class="column-group gutters">
+        <div class="all-5 hide-medium hide-small">
+          <!-- spacer -->
+        </div>
         <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Miguel Araújo</h6>
           <img src="img/team/miguel_araujo.png" onmouseover="this.src='img/team/miguel_araujo.png'" onmouseout="this.src='img/team/miguel_araujo.png'" alt="">
@@ -624,13 +629,32 @@
           <a href="mailto:miguel.araujo@sinfo.org"><i class="fa fa-envelope"></i></a>
           <a href="https://www.facebook.com/m.p.f.a.93" target="_blank"><i class="fa fa-facebook"></i></a>
           <a href="http://twitter.com/DonaGraciete" target="_blank"><i class="fa fa-twitter"></i></a>
-          <a href="pt.linkedin.com/pub/miguel-araújo/63/619/743/" target="_blank"><i class="fa fa-linkedin"></i></a>
+          <a href="https://pt.linkedin.com/pub/miguel-araújo/63/619/743/" target="_blank"><i class="fa fa-linkedin"></i></a>
           <a href="https://github.com/DonaGraciete" target="_blank"><i class="fa fa-github"></i></a>
+        </div>
+        <div class="all-15 medium-30 small-50 tiny-50">
+          <h6>Duarte Paiva</h6>
+          <img src="img/team/duarte_paiva.png" onmouseover="this.src='img/team/duarte_paiva.png'" onmouseout="this.src='img/team/duarte_paiva.png'" alt="">
+          <br>
+          <a href="mailto:duarte.paiva@sinfo.org"><i class="fa fa-envelope"></i></a>
+          <a href="https://pt.linkedin.com/pub/duarte-paiva/8a/776/632" target="_blank"><i class="fa fa-linkedin"></i></a>
+        </div>
+        <div class="all-15 medium-30 small-50 tiny-50">
+          <h6>Miguel Cordeiro</h6>
+          <img src="img/team/miguel_cordeiro.png" onmouseover="this.src='img/team/miguel_cordeiro.png'" onmouseout="this.src='img/team/miguel_cordeiro.png'" alt="">
+          <br>
+          <a href="mailto:miguel.cordeiro@sinfo.org"><i class="fa fa-envelope"></i></a>
+        </div>
+        <div class="all-15 medium-30 small-50 tiny-50">
+          <h6>Inês Urbano</h6>
+          <img src="img/team/ines_urbano.png" onmouseover="this.src='img/team/ines_urbano.png'" onmouseout="this.src='img/team/ines_urbano.png'" alt="">
+          <br>
+          <a href="mailto:ines.urbano@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
       </div>
     </div>
 
-    <div class="orador" id="orador">
+    <!--<div class="orador" id="orador">
       <div class="opacidade">
         <h1><a href="#orador" title="orador">Who's that speaker?</a></h1>
         <div class="description">
@@ -659,7 +683,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <footer>
       <div class="ink-grid">
