--- a/code.html
+++ b/code.html
@@ -125,6 +125,10 @@
                                         <p>We expect participants to follow these rules at conference and workshop venues and conference-related social events.</p>
 				</div>
 			</div>
+			
+			<div class="small note">
+				Based on <a href="http://confcodeofconduct.com">http://confcodeofconduct.com</a>
+			</div>
 		</div>
 
 	<footer>
