Quem e este orador esta live

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
           <li><a href="#meetus">Meet us!</a></li>
-          <li><a href="code.html">Code of Conduct</a></li>
-          <!--<li><a href="#orador" class="glow">QUEM É ESTE ORADOR?</a></li>-->
+          <li><a href="#orador" class="glow">QUEM É ESTE ORADOR?</a></li>
+          <li><a href="code.html">Code of Conduct</a></li>          
         </ul>
       </nav>
 
@@ -647,7 +647,7 @@
       </div>
     </div>
 
-    <!--<div class="orador" id="orador">
+    <div class="orador" id="orador">
       <div class="opacidade">
         <h1><a href="#orador" title="orador">Who's that speaker?</a></h1>
         <div class="description">
@@ -676,7 +676,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <footer>
       <div class="ink-grid">
