--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="ink-grid text-section whois">
     	<div class="column-group gutters">
     		<div class="all-100" id="whoIsTitle">
@@ -666,7 +666,7 @@
     	<div class="column-group gutters">
     		<div class="all-100" id="whoIsPhoto">
     			<img src="img/who.jpg" onclick="
-    			$(this).after('<p>Yes! Helder Pinto will be at SINFO XXI, know more below</p>');
+    			$(this).after('<p>Yes! Helder Pinto will be at SINFO XXII, know more below</p>');
     			$(this).replaceWith('<img src=&quot;img/orador1.jpg&quot;>');    			
     			$('#whoIsPhoto').attr('id', 'whoIsNewPhoto');
     			$('#whoIsTitle h3').replaceWith('<h2>Helder Pinto</h2>');
